schedule content fixes

--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -7,11 +7,6 @@
           </ion-text>
           <ion-button slot="end" (click)="viewSchedule()" *ngIf="!isSlideShow">view</ion-button>
           <ion-button slot="end" (click)="viewSchedule()" *ngIf="isSlideShow">close</ion-button>
-          <ion-button slot="end"
-            (click)="schedule.workoutAdded ? viewWorkout(schedule) : addWorkout(schedule)"
-          >
-        {{ schedule.workoutAdded ? 'View Workout' : 'Add Workout' }}
-      </ion-button>
         </ion-item>
     
         <ion-item-options side="start">
@@ -20,7 +15,11 @@
         </ion-item-options>
     
         <ion-item-options side="end">
-          <ion-item-option (click)="viewExercises()">Exercises</ion-item-option>
+          <ion-item-option
+          (click)="schedule.workoutAdded ? viewWorkout(schedule) : addWorkout(schedule)"
+        >
+          {{ schedule.workoutAdded ? 'View Workout' : 'Add Workout' }}
+        </ion-item-option>
           <ion-item-option color="danger" (click)="presentActionSheet()">Delete</ion-item-option>
         </ion-item-options>
     </ion-item-sliding>
