--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -10,8 +10,7 @@
         </ion-item>
     
         <ion-item-options side="start">
-          <ion-item-option color="success" (click)="toggleEditSlide()" *ngIf="!isEditSlide"> Edit </ion-item-option>
-          <ion-item-option color="success" (click)="toggleEditSlide()" *ngIf="isEditSlide">cancel</ion-item-option>
+          <ion-item-option color="success" (click)="toggleEditSlide()">{{ isEditSlide ? "Cancel" : "Edit" }}</ion-item-option>
         </ion-item-options>
     
         <ion-item-options side="end">
