--- a/src/app/pages/otheruserbadges/other-user-badges.page.html
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.html
@@ -8,11 +8,13 @@
 
 <ion-content class="badgesContainer">
   <ion-grid class="loginGrid">
-    <badge *ngFor ="let badge of badges" 
-    [name] = "badge.header"
-    [receivedDescription] = "badge.receivedDescription"
-    [notReceivedDescription] = "badge.notReceivedDescription"
-    [received] = "badge.received"
-  ></badge>
+    <ng-container *ngFor="let badge of badges">
+      <badge *ngIf="badge.received"
+        [name]="badge.header"
+        [receivedDescription]="badge.receivedDescription"
+        [notReceivedDescription]="badge.notReceivedDescription"
+        [received]="badge.received"
+      ></badge>
+    </ng-container>
   </ion-grid>
 </ion-content>
