--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -14,7 +14,7 @@
 }
 .Mcard{
     border: radius 50px;
-    background-color:rgb(144,202,243 , 0.9)
+    background-color:rgb(144,202,243 , 1)
     
 }
 .flex-center2{
@@ -24,4 +24,16 @@
 }
 .Bcard{
     background-color:rgb(144,202,243 , 0.9)
+}
+
+.ion-icon1{
+    font-size: 28px;
+}
+
+.flex-center3{
+    display: flex;
+    justify-content: center;
+    
+    border: radius 50px;
+
 }
