fixed points page navigation

--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -31,7 +31,7 @@
         <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
       </span>
     </ion-item>
-    <ion-button routerLink="/plans">View Workout Plan</ion-button>
+    <ion-button routerLink="/workout-tracking">View Workout Plan</ion-button>
     </ion-item>
 
 
@@ -49,7 +49,7 @@
         <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
       </span>
     </ion-item>
-    <ion-button routerLink="/sessions">View Gym Schedule</ion-button>
+    <ion-button routerLink="/workout-scheduling">View Gym Schedule</ion-button>
     </ion-item>
 
     <ion-item class="workoutSessionPointsSection">
@@ -66,7 +66,7 @@
         <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
       </span>
     </ion-item>
-    <ion-button routerLink="/goals">View Fitness Goals</ion-button>
+    <ion-button routerLink="/fitnessgoals">View Fitness Goals</ion-button>
     </ion-item>
   </ion-grid>
 </ion-content>
