--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -1,7 +1,8 @@
 <ion-header [translucent]="true">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <ion-toolbar>
     <ion-item lines="none">
-      <backbutton></backbutton>
+      <backbutton class="larger-back-button"></backbutton>
       <ion-title>Schedules</ion-title>
     </ion-item>
   </ion-toolbar>
