--- a/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
+++ b/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
@@ -1,35 +1,35 @@
   <ion-item>
     <ion-label position="floating">
       <ion-icon name="barbell-outline"></ion-icon>
-      name
+      Name
     </ion-label>
     <ion-input type="text" value="{{schedule.name}}" [(ngModel)]="schedule.name" (ionChange)="checkChange()"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">
-      <ion-icon name="calendar-outline"></ion-icon> date
+      <ion-icon name="calendar-outline"></ion-icon> Date
     </ion-label>
     <ion-input type ="date" value="{{schedule.date}}" [(ngModel)]="schedule.date" (ionChange)="checkChange()"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">
-      <ion-icon name="time-outline"></ion-icon> time
+      <ion-icon name="time-outline"></ion-icon> Time
     </ion-label>
     <ion-input type = "time"value="{{schedule.time}}" [(ngModel)]="schedule.time" (ionChange)="checkChange()"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">
-      <ion-icon name="location-outline"></ion-icon> location
+      <ion-icon name="location-outline"></ion-icon> Location
     </ion-label>
   <ion-input type = "text" value="{{schedule.location}}" [(ngModel)]="schedule.location" (ionChange)="checkChange()"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">
-      <ion-icon name="timer-outline"></ion-icon> duration
+      <ion-icon name="timer-outline"></ion-icon> Duration
     </ion-label>
     <ion-input type = "number" value="{{schedule.duration}}" [(ngModel)]="schedule.duration" (ionChange)="checkChange()"></ion-input>
   </ion-item>
