--- a/src/app/pages/workout-scheduling/schedule/schedule.component.scss
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.scss
@@ -5,9 +5,14 @@ ion-text {
 ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
-    --background: #457B9D;
+    --background: #A8DADC;
 }
 
 ion-card, ion-item {
     opacity: 1;
+}
+
+.custom-search {
+    border-radius: 12px;
+    margin-bottom: 0;
 }
