Changed workout tracking styling

--- a/src/app/pages/workout-tracking/workout-tracking.page.scss
+++ b/src/app/pages/workout-tracking/workout-tracking.page.scss
@@ -71,3 +71,17 @@ input[formControlName="reps"],
 input[formControlName="weight"] {
   border-radius: 12px;
 }
+
+ion-toolbar{
+  --background: #E63946
+}
+
+ion-toolbar ion-item{
+  --background: #E63946
+}
+
+.larger-back-button {
+  --padding-start: 12px; 
+  --padding-end: 12px; 
+  font-size: 24px; 
+}
