--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -2,7 +2,7 @@ ion-text {
     margin: 20px;
 }
 
-ion-item{
+ion-item:not(.progress-label){
     --highlight-height: 0;
     --inner-border-width: 0;
     --background: #457B9D;
@@ -26,10 +26,10 @@ ion-button {
     --ripple-color: deeppink;
 }
 
-ion-icon:active {
-    color: green;
+ion-icon.active {
+    color: blue;
 }
 
-ion-icon:inactive {
+ion-icon.inactive {
     color: grey;
 }
