--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item >
-      <ion-icon  name="arrow-back-outline" (click)="back()"></ion-icon>
+    <ion-item lines="none">
+      <backbutton></backbutton>
       <ion-title>Notifications</ion-title>
     </ion-item>
   </ion-toolbar>
