--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -3,6 +3,10 @@
   background-color: rgba(#F1FAEE,0.8);
 }
 
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
 ion-card {
   margin: 0px;
   border-radius: 0px;
@@ -16,25 +20,6 @@ ion-card {
   overflow: auto;
 }
 
-img {
-  height: 18px;
-  width: 40px;
-  background-color: aqua;
-  border-radius: 50%;
-  border:1px solid lightcoral;
-}
-
-ion-card-title {
-  font-weight: bold;
-  font-style: italic;
-  color: lightcoral;
-  text-shadow: #a9cfe0 2px 2px;
-  margin-bottom: 40px;
-}
-
-ion-card-subtitle {
-  margin: 20px;
-}
 
 ion-card-header {
   color: #8490ba;
@@ -44,24 +29,11 @@ ion-card-header {
 
 .signIn-buttons {
   margin-bottom: 10px;
+  --background: #E63946;
 }
 
 ion-button {
-  --background: #A8DADC;
-  --background-hover: #9ce0be;
-  --background-activated: #88f4be;
-  --background-focused: #88f4be;
-
-  --color: #000;
-
-  --border-radius: 10px;
-  --border-color: #E63946;
-  --border-style: solid;
-  --border-width: 3px;
-  
-
-  --ripple-color: deeppink;
-
+  --background: #E63946;;
   --margin: 20px;
 }
 
@@ -76,28 +48,23 @@ ion-button {
 .inner-container {
   box-shadow: 0px 2px 10px;
   padding: 40px;
-  border-radius: 5px;
+  text-align: center;
+  border-radius: 12px;
+  width: 85%;
   background-color: rgba($color: #050e12, $alpha: 0.1); // #95c4da
-}
-
-.background-cover {
-  position: absolute;
-  top: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
-ion-img {
-  opacity: 0.5;
-  overflow: hidden;
-  position: fixed;
 }
 
 @keyframes fadeIn {
   0% { opacity: 0.1; }
   100% { opacity: 1; }
+}
+
+img[src="/assets/Asset 1.png"] {
+  width: 50%;
+  height: auto;
+  background: transparent;
+  border-radius: 0;
+  border: none; 
+  outline: none; 
+  outline-color: transparent; 
 }
