Changed search page styling

--- a/src/app/pages/search/search.page.scss
+++ b/src/app/pages/search/search.page.scss
@@ -11,5 +11,5 @@ ion-segment {
 }
 
 ion-content {
-  --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
+  --background: url('/assets/Asset 2.png') no-repeat center/contain fixed; // #1D3557;
 }
