--- a/src/app/pages/search/usersearch/usersearch.component.html
+++ b/src/app/pages/search/usersearch/usersearch.component.html
@@ -20,7 +20,7 @@
           {{ suggestion.displayName }}
         </ion-item>
         <ion-item lines="none" *ngIf="showNoResults && this.searchTerms.filteredSuggestions!.length==0">
-          <ion-text>user not found</ion-text>
+          <ion-text>No users found</ion-text>
         </ion-item>
       </ion-list>
     </ion-card>
