--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -1,12 +1,12 @@
 <div class="outer-container">
   <ion-content>
     <div class="inner-container">
-      <ion-segment value="gym">
+      <ion-segment value="user">
+        <ion-segment-button (click) = "userSlide()" value="user">
+          <ion-label>User</ion-label>
+        </ion-segment-button>
         <ion-segment-button (click) = "gymSlide()" value="gym">
           <ion-label>Gym</ion-label>
-        </ion-segment-button>
-        <ion-segment-button (click) = "userSlide()" value="user">
-          <ion-label>user</ion-label>
         </ion-segment-button>
       </ion-segment>
 
