--- a/src/app/pages/search/usersearch/usersearch.component.scss
+++ b/src/app/pages/search/usersearch/usersearch.component.scss
@@ -13,6 +13,7 @@ ion-item{
 }
 
 ion-card, ion-item {
-    --background: #457B9D;
-    opacity: 0.9;
+    --background: #A8DADC;
+    opacity: 1;
+    border-radius: 12px;
 }
