--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -35,13 +35,13 @@
     </ion-item>
 
 
-    <ion-item class="workoutSessionPointsSection">
+    <ion-item class="workoutSessionPointsSection" *ngIf="workoutSessionsAttended$ | async as workoutSessionsAttended">
       <h2 class="pointsHeader" style="margin:None">Attend 3 Workout Sessions</h2>
       <div class="progressContainer">
         <ion-text class="progressHeader">Progress: </ion-text>
-        <ion-text class="progressText">1/3</ion-text>
+        <ion-text class="progressText">{{ workoutSessionsAttended }}/3</ion-text>
       </div>
-      <ion-progress-bar value="0.3333" class="custom-progress-bar" style="--ion-color-primary: var(--custom-red);"></ion-progress-bar>
+      <ion-progress-bar [value]="+workoutSessionsAttended / 3" class="custom-progress-bar" style="--ion-color-primary: var(--custom-red);"></ion-progress-bar>
       <ion-item class="wpPointsSection">
       <ion-text class="workoutPlanPoints">Points:</ion-text>
       <span class="workoutPlanPointsContent">
