--- a/src/app/pages/otheruser/otheruser.page.scss
+++ b/src/app/pages/otheruser/otheruser.page.scss
@@ -1,14 +1,55 @@
 .otheruser-profile {
+    box-shadow: 3px 3px 5px #1D3557;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     ion-item {
+        --padding-top: 10px;
+        --padding-start: 0;
+        --padding-end: 0;
+        --inner-border-width: 0;
+        --inner-padding-bottom: 0;
+        --inner-padding-top: 0;
         ion-avatar {
             height: 150px;
             width: 150px;
+            --background: #A8DADC;
         }
     }
 
     #userName {
         font-size: 25px;
+        --background: #A8DADC;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-weight: bold;
     }
+
+    ion-button {
+        --border-radius: 12px;
+        font-size: 14px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        --background: white;
+    }
+
+    #userBio {
+        font-size: 16px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding: 10px;
+    }
+}
+
+*{
+    font-family: 'Montserrat', sans-serif;
+}
+
+ion-card{
+    --background: #A8DADC;
 }
 
 .content {
@@ -25,4 +66,38 @@
 ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
+    --background: #A8DADC;
+}
+
+ion-header{
+    ion-item{
+        --background: #E63946;
+        ion-title{
+            --background: #E63946;
+        }
+    }
+    --background: #E63946;
+}
+
+.larger-back-button {
+    --padding-start: 12px; 
+    --padding-end: 12px; 
+    font-size: 24px; 
+}
+
+ion-button{
+    --background: rgb(255, 247, 247);
+    color: black
+}
+
+ion-item{
+    ion-button{
+        --background: white;
+    }
+}
+
+ion-content{
+    ion-card{
+        box-shadow: 3px 3px 5px #1D3557;
+    }
 }
