Changed viewing anoter users'schedules and friends styling

--- a/src/app/pages/friends/friend/friend.component.scss
+++ b/src/app/pages/friends/friend/friend.component.scss
@@ -12,7 +12,7 @@
 ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
-    --background: #457B9D;
+    --background: #A8DADC;
 }
 
 ion-card, ion-item {
