--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -2,7 +2,7 @@
   <ion-header [translucent]="true">
     <ion-toolbar>
       <ion-item>
-        <backbutton></backbutton>
+        <backbutton class="larger-back-button"></backbutton>
         <ion-title>Friends</ion-title>
       </ion-item>
     </ion-toolbar>
