--- a/src/app/pages/friends/friends.page.scss
+++ b/src/app/pages/friends/friends.page.scss
@@ -5,6 +5,19 @@
    }
 }
 
+ion-header{
+    ion-toolbar{
+        --background: #E63946;
+    }    
+    ion-item{
+        --background: #E63946;
+        ion-title{
+            --background: #E63946;
+        }
+    }
+    --background: #E63946;
+}
+
 ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
