--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,9 +1,9 @@
 <ng-container>
-  <ion-header [translucent]="true">
+  <ion-header style="--background: #E63946;">
     <ion-toolbar>
       <ion-item>
-        <backbutton></backbutton>
-        <ion-title>WorkoutSchedules</ion-title>
+        <backbutton class="larger-back-button"></backbutton>
+        <ion-title>Workout Schedules</ion-title>
       </ion-item>
     </ion-toolbar>
   </ion-header>
@@ -17,7 +17,7 @@
             <ion-text>
               {{schedule.name}}
             </ion-text>
-            <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
+            <ion-button slot="end" (click)="viewSchedule(schedule)" id="xd">View</ion-button>
           </ion-item>
           <ion-card-content  *ngIf="isSlideShow">
             <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.name}}</ion-text><br>
