--- a/src/app/pages/otheruser/schedules/schedules.component.scss
+++ b/src/app/pages/otheruser/schedules/schedules.component.scss
@@ -5,13 +5,43 @@ ion-text {
 ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
-    --background: #457B9D;
+    --background: #A8DADC;
+}
+
+.larger-back-button {
+    --padding-start: 12px; 
+    --padding-end: 12px; 
+    font-size: 24px; 
+}
+
+ion-header{
+    ion-toolbar{
+        --background: #E63946;
+    }    
+    ion-item{
+        --background: #E63946;
+        ion-title{
+            --background: #E63946;
+        }
+    }
+    --background: #E63946;
+}
+
+
+#xd{
+    --background: white; 
+    color:black; 
+    border-radius: 5px;
 }
 
 ion-card, ion-item {
-    opacity: 0.9;
+    opacity: 1;
 }
 
 ion-content {
-    --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
+    --background: url('/assets/Asset 2.png') no-repeat center/contain fixed; // #1D3557;
+}
+
+*{
+    font-family: 'Montserrat', 'sans-serrif';
 }
