--- a/src/app/pages/friends/friends.page.scss
+++ b/src/app/pages/friends/friends.page.scss
@@ -24,7 +24,7 @@ ion-item{
 }
 
 ion-content {
-    --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
+    --background: url('/assets/Asset 2.png') no-repeat center/contain fixed; // #1D3557;
 }
 
 ion-item, ion-toolbar {
