--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item color="medium">
-      <backbutton></backbutton>
+    <ion-item>
+      <backbutton class="larger-back-button"></backbutton>
       <ion-title>Notifications</ion-title>
     </ion-item>
   </ion-toolbar>
@@ -11,15 +11,14 @@
 
 <ion-content class="main">
   <ion-item lines="none">
-    <ion-title slot="start" style="display:inline-block"><b>Today</b></ion-title>
-    <ion-title slot="end" style="display:inline-block" ><ion-button fill="clear" (click)="clearNotifications()">Clear all</ion-button></ion-title>
+    <ion-title slot="end" style="display:inline-block; background: none; " ><ion-button fill="clear" (click)="clearNotifications()">Clear All</ion-button></ion-title>
   </ion-item>
     <br>
     <br>
     
   <div *ngIf="noticeamount > 0" >
   <ion-card class="Mcard" *ngFor="let notice of noticeList2">
-    <div>{{"&nbsp;".repeat(89)}}<ion-button fill="clear" size="small" (click)="clearNotification(notice.id!)"><ion-icon name="close-circle-outline" size="small"></ion-icon></ion-button></div>
+    <div>{{"&nbsp;".repeat(89)}}<ion-button fill="clear" size="small" (click)="clearNotification(notice.id!)" style="color: black;"><ion-icon name="close-circle-outline" size="small"></ion-icon></ion-button></div>
     <ion-card-content style="display:flex ; align-items:center" >
   <ion-avatar slot="start">
     <img alt="Silhouette of a person's head" src="https://i.pravatar.cc/300" />
