Changed splash page styling

--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -4,14 +4,13 @@
     <div class="logo-container">
       <img class="logo-img" src="assets/sweatsessionlogotransparent1.png" alt="logo">
     </div>
-    <ion-card-header>
-      <ion-card-title>About</ion-card-title>
+    <ion-card-header style="text-align: center;">
+      <ion-card-title style="margin-top: 10px;">About</ion-card-title>
       <ion-card-subtitle></ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
-      Sweat Session is a fitness app that allows users to track their workouts and progress.
-      more random text to describe the app to the user and welcome them to our Cool app.
+      Sweat Session is a fitness app that allows users to track their workouts and progress, and make some friends along the way.
     </ion-card-content>
     
 <!--    <ion-button size="large" class="getSButton"  fill="outline" routerLink="/login">-->
