--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -5,16 +5,21 @@ ion-card {
   align-items: center;
   justify-content: center;
   border-radius: 0px;
-  background-color: rgba($color: #a9cfe0, $alpha: 0.8);
+  background-color: white;
   border: 2px solid rgb(9, 50, 66);
   overflow-y:auto;
   .inner-wrapper {
     max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center; 
     margin: 20px;
     ion-card-title {
       font-weight: bolder;
     }
-  }
+  }  
   color:  rgba(#584d4e,0.5);
   font-weight: bold;
   font-style:initial;
@@ -42,6 +47,10 @@ ion-button {
   --ripple-color: deeppink;
 
   --margin: 20px;
+}
+
+*{
+  font-family: 'Montserrat', 'san-serrif';
 }
 
 button {
