--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <backbutton class="larger-back-button"></backbutton>
       <ion-title>Notifications</ion-title>
     </ion-item>
