--- a/src/app/pages/otheruserbadges/other-user-badges.page.html
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-item style="display: flex; align-items: center;">
-    <ion-icon name="arrow-back-outline" routerLink="/userprofile" style="font-size: 2rem;"></ion-icon>
+  <ion-item style="display: flex; align-items: center;" lines="none">
+    <backbutton class="larger-back-button"></backbutton>
     <ion-title style="margin: 0 auto;" *ngIf="name$ | async as usersName;">{{usersName}}</ion-title>
     <!-- <ion-title style="margin: 0 auto;">{{user!.name}}'s' Badges</ion-title> -->
   </ion-item>
