--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -35,7 +35,7 @@
     </ion-item>
 
 
-    <ion-item class="workoutSessionPointsSection" *ngIf="workoutSessionsAttended$ | async as workoutSessionsAttended">
+    <ion-item class="workoutSessionPointsSection" *ngIf="workoutSessionsAttended$ | async as workoutSessionsAttended; else elseBlock">
       <h2 class="pointsHeader" style="margin:None">Attend 3 Workout Sessions</h2>
       <div class="progressContainer">
         <ion-text class="progressHeader">Progress: </ion-text>
@@ -51,6 +51,24 @@
     </ion-item>
     <ion-button routerLink="/workout-scheduling">View Gym Schedule</ion-button>
     </ion-item>
+    <ng-template #elseBlock>
+      <ion-item class="workoutSessionPointsSection">
+        <h2 class="pointsHeader" style="margin:None">Attend 3 Workout Sessions</h2>
+        <div class="progressContainer">
+          <ion-text class="progressHeader">Progress: </ion-text>
+          <ion-text class="progressText">0/3</ion-text>
+        </div>
+        <ion-progress-bar [value]="0.0" class="custom-progress-bar" style="--ion-color-primary: var(--custom-red);"></ion-progress-bar>
+        <ion-item class="wpPointsSection">
+        <ion-text class="workoutPlanPoints">Points:</ion-text>
+        <span class="workoutPlanPointsContent">
+          <ion-text class="wpNumberValue">75</ion-text>
+          <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
+        </span>
+      </ion-item>
+      <ion-button routerLink="/workout-scheduling">View Gym Schedule</ion-button>
+      </ion-item>
+    </ng-template>
 
     <ion-item class="workoutSessionPointsSection">
       <h2 class="pointsHeader" style="margin:None">Complete a fitness goal</h2>
