--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -56,7 +56,7 @@
     <div class="flex-center"> 
       <ion-card class="card">
         <ion-card-content>
-          <ion-button class="button" expand="block" routerLink="/fitnessgoals"><ion-icon name="american-football-outline" slot = "start"></ion-icon>Goals<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+          <ion-button class="button" expand="block"  (click)="load()" routerLink="/fitnessgoals"><ion-icon name="american-football-outline" slot = "start"></ion-icon>Goals<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
         </ion-card-content>
 
         <ion-card-content>
@@ -69,3 +69,4 @@
 
       </ion-card>
     </div>
+</ion-content>
