auth part of continueWithGoogle

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -30,7 +30,7 @@
         </ion-button>
       </form>
 
-      <ion-button class="loginButton" expand="block" >
+      <ion-button class="loginButton" expand="block" (click)="continueWithGoogleAuth()">
         <ion-icon name="logo-google" style="padding-right:5%;"></ion-icon>
         <ion-text>Continue with Google</ion-text>
       </ion-button>
