--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -61,7 +61,7 @@
         Already have an account?
         <hr>
       </ion-card-subtitle>
-      <ion-button class="signIn-buttons" expand="block" >
+      <ion-button class="signIn-buttons" expand="block" (click)="continueWithGoogleAuth()">
         <ion-icon name="logo-google" style="padding-right:5%;"></ion-icon>
         <ion-text>Continue with google</ion-text>
       </ion-button>
